fix(heatmap legend): always visible

--- a/frontend/css/bulkSearch.css
+++ b/frontend/css/bulkSearch.css
@@ -33,11 +33,10 @@
 
 .heatmap-container .legend {
     display: flex;
-    width: max-content;
-    visibility: hidden;
+    justify-content: space-between;
+    flex-wrap: wrap;
     border: 0.5px solid silver;
     background-color: rgba(226, 226, 226, 0.48);
-    margin: 5px;
 }
 .heatmap-container .legend .l-item{
     display:flex;
